<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Concordium</string>
    <string name="app_menu_item_add_recipient">Add</string>
    <string name="app_error_general">Unexpected error</string>
    <string name="app_error_lib">An unexpected error occurred, please try again</string>
    <string name="app_error_encryption">Unexpected encryption/decryption error</string>
    <string name="app_error_keystore">Unexpected keystore error</string>
    <string name="app_error_keystore_key_invalidated">Biometrics has been changed and therefore disabled.</string>
    <string name="app_error_backend_unknown_host_exception">Cannot connect. Please check the internet connection.</string>
    <string name="app_error_backend_connect_exception">Cannot connect. Please check the internet connection.</string>
    <string name="app_error_backend_unknown_sockettimeout_exception">Connection to server timed out. Please check the internet connection.</string>
    <string name="app_error_backend_internal_server">Cannot establish communication with the server.</string>
    <string name="app_error_backend_unknown_error_code">Cannot establish communication with the server.</string>
    <string name="app_error_backend_unknown2">Unknown backend error</string>
    <string name="app_version">Version %1$s</string>
    <string name="app_version_about">%1$s</string>
    <string name="app_gstroke">Ͼ</string>
    <string name="dialog_ok">Okay</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="main_title">Accounts</string>
    <string name="view_identity_identity">Identity</string>
    <string name="view_account_initial">Initial</string>
    <string name="view_account_read_only">Read-only</string>
    <string name="view_account_baking">Baking</string>
    <string name="view_account_delegating">Delegating</string>
    <string name="view_account_name_container">(%1$s)</string>
    <string name="failed_title">Failed</string>
    <string name="failed_try_again">Please try again.</string>
    <string name="failed_confirm">Okay</string>
    <string name="failed_remove">Remove from list</string>
    <string name="terms_title">Terms and conditions for Concordium Wallet for Mobile</string>
    <string name="intro_setup_header">Are you new to Concordium?</string>
    <string name="intro_setup_info_1">I\'m new!</string>
    <string name="intro_setup_info_2">If this is your first time using the Concordium blockchain, you can set up a fresh wallet. This includes:\n\n1. Your secret recovery phrase\n2. A brief introduction to Concordium\n3. Your first Concordium identity\n4. You first Concordium account\n\nYou will be guided through each step of the process.</string>
    <string name="intro_recover_info_1">I already have a wallet!</string>
    <string name="intro_recover_info_2">If you previously set up a Concordium wallet with a secret recovery phrase, you can restore your wallet here.</string>
    <string name="intro_setup_wallet">Set up a fresh wallet</string>
    <string name="intro_recover_wallet">Recover wallet</string>
    <string name="earn_subtitle">There are two options for earning rewards on Concordium: Baking and delegation.</string>
    <string name="earn_baker_title">Baking</string>
    <string name="earn_baker_description">As a baker you participate in the network by baking blocks on the Concordium network. This requires a minimum of %1$s CCD and access to a dedicated node.</string>
    <string name="earn_delegation_title">Delegation</string>
    <string name="earn_delegation_description">If you don\'t have access to your own node you may delegate your stake to one of the other bakers. There is no minimum amount of CCD required when delegating.</string>
    <string name="earn_description">Choose the option that suits you below to learn more.\n\nNOTE: A single account cannot both be a baker and delegator, but it is possible to stop one and change to the other.</string>
    <string name="earn_delegation_button">Continue to delegation setup</string>
    <string name="earn_baker_button">Continue to baker setup</string>
    <string name="auth_dialog_password_description">Enter app password to continue</string>
    <string name="auth_dialog_password">Password</string>
    <string name="auth_dialog_password_error">Incorrect password</string>
    <string name="wallet_connect_transaction_approve">Approve Transaction?</string>
    <string name="wallet_connect_transaction_receipt_title">Transaction: Update Contract</string>
    <string name="wallet_connect_transaction_sender_account">Sender account</string>
    <string name="wallet_connect_transaction_amount">Amount</string>
    <string name="wallet_connect_transaction_contract_address">Contract index</string>
    <string name="wallet_connect_transaction_parameters">Parameters</string>
    <string name="wallet_connect_transaction_reject">Reject</string>
    <string name="wallet_connect_transaction_submit">Submit</string>
    <string name="about_support">Support</string>
    <string name="about_support_text">If you encountered a problem, or need help with something, you can reach out to us via <a href="support@concordium.software">support@concordium.software</a></string>
    <string name="about_contact">Website</string>
    <string name="about_contact_text">For more info about Concordium you can visit <a href="https://concordium.com">concordium.com</a></string>
    <string name="about_version">App Version</string>
    <string name="proof_of_identity_prompt_title">Proof of Identity</string>
    <string name="proof_of_identity_prompt_subtitle">%1$s requests the following information about you:</string>
    <string name="proof_of_identity_prompt_proof_not_met">You don’t meet all requirements, and will not be able to accept the request.</string>
    <string name="proof_of_identity_prompt_accept">Accept</string>
    <string name="proof_of_identity_prompt_reject">Reject</string>
</resources>