<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Layout.Root">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/app_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        style="@style/ScrollView.Standard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llSetup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/llRecover"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/TextView.BlueHeader"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/intro_setup_header" />

                <TextView
                    style="@style/TextView.Standard.Bold"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/intro_setup_info_1" />

                <TextView
                    style="@style/TextView.Standard"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/intro_setup_info_2" />

                <Button
                    android:id="@+id/setupWallet"
                    style="@style/Button.Standard.Intro"
                    android:layout_width="match_parent"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:text="@string/intro_setup_wallet" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llRecover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/llSetup">

                <TextView
                    style="@style/TextView.Standard.Bold"
                    android:text="@string/intro_recover_info_1" />

                <TextView
                    style="@style/TextView.Standard"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/intro_recover_info_2" />

                <Button
                    android:id="@+id/recoverWallet"
                    style="@style/Button.Standard.Intro"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/intro_recover_wallet" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
