<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Layout.Root">

    <TextView
        android:id="@+id/header_1"
        style="@style/TextView.Standard.Bold"
        android:text="@string/wallet_connect_transaction_approve"
        android:layout_marginTop="@dimen/activity_vertical_margin_extended"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="12dp"
        android:background="@drawable/receipt_background_new"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_1">

        <TextView
            style="@style/TextView.Standard.RegisterDelegationReceipt.Title"
            android:layout_width="match_parent"
            android:layout_marginVertical="@dimen/activity_receipt_item_vertical_margin"
            tools:text="@string/wallet_connect_transaction_receipt_title" />

        <View style="@style/Divider" />

        <TextView
            style="@style/TextView.Standard.RegisterDelegationReceipt.Title"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_receipt_item_vertical_margin"
            android:text="@string/wallet_connect_transaction_sender_account" />

        <TextView
            android:id="@+id/account_to_send_from"
            style="@style/TextView.Standard.RegisterDelegationReceipt.Content"
            android:layout_width="match_parent"
            tools:text="Main\n\n14f3632ac857400d417a7277f726c43a 8ddf07184f10a429cf0759e985247c33" />

        <TextView
            style="@style/TextView.Standard.RegisterDelegationReceipt.Title"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_receipt_item_vertical_margin"
            android:text="@string/wallet_connect_transaction_amount" />

        <TextView
            android:id="@+id/amount"
            style="@style/TextView.Standard.RegisterDelegationReceipt.Content"
            android:layout_width="match_parent"
            tools:text="Ͼ123.45" />

        <TextView
            style="@style/TextView.Standard.RegisterDelegationReceipt.Title"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_receipt_item_vertical_margin"
            android:text="@string/wallet_connect_transaction_contract_address" />

        <TextView
            android:id="@+id/contract_address"
            style="@style/TextView.Standard.RegisterDelegationReceipt.Content"
            android:layout_height="wrap_content"
            tools:text="14f3632ac857400d417a7277f726c43a 8ddf07184f10a429cf0759e985247c33" />

        <TextView
            style="@style/TextView.Standard.RegisterDelegationReceipt.Title"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_receipt_item_vertical_margin"
            android:text="@string/wallet_connect_transaction_parameters" />

        <TextView
            android:id="@+id/parameters"
            style="@style/TextView.Mono.XSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin_double"
            android:layout_marginTop="@dimen/activity_receipt_item_vertical_margin"
            android:background="@drawable/bg_border_gray"
            android:padding="@dimen/activity_horizontal_margin"
            tools:text="[\n  {\n    &quot;type&quot;:&quot;uint256&quot;\n  },\n  {\n    &quot;type&quot;:&quot;bytes[]&quot;\n  }\n]" />

        <TextView
            android:id="@+id/estimated_transaction_fee"
            style="@style/TextView.Standard.RegisterDelegationReceipt.Content.Gray"
            android:layout_width="match_parent"
            android:layout_marginVertical="@dimen/activity_receipt_item_vertical_margin"
            tools:text="Estimated transaction fee:\nϾ 0.0059" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/reject"
            style="@style/Button.Standard.Danger"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_half"
            android:text="@string/wallet_connect_transaction_reject" />
        <Button
            android:id="@+id/submit"
            style="@style/Button.Standard"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginStart="@dimen/activity_horizontal_margin_half"
            android:text="@string/wallet_connect_transaction_submit" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
