<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backup_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingTop="16dp"
    android:paddingRight="24dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/password_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:text="@string/auth_dialog_password_description"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        android:textColor="?android:attr/textColorSecondary" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_description"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/auth_dialog_password"
        android:imeOptions="actionGo"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_edittext"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/redesign_negative"
        android:textSize="14dp"
        tools:text="@string/auth_dialog_password_error" />

</RelativeLayout>