<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <TextView
        android:id="@+id/title"
        style="@style/TextView.Standard"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/proof_of_identity_prompt_title" />

    <TextView
        android:id="@+id/sub_title"
        style="@style/TextView.Small"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        tools:text="@string/proof_of_identity_prompt_subtitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/proofs_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin_extended"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_title"
        app:layout_constraintBottom_toTopOf="@+id/proof_not_met"
        tools:listitem="@layout/item_proof_of_identity"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/proof_not_met"
        style="@style/TextView.Standard.Error"
        android:layout_marginVertical="@dimen/activity_vertical_margin_half"
        android:layout_marginHorizontal="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/proof_of_identity_prompt_proof_not_met"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proofs_holder"
        app:layout_constraintBottom_toTopOf="@+id/button_container"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/reject"
            style="@style/Button.Standard.Intro"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/proof_of_identity_prompt_reject" />
        <Button
            android:id="@+id/accept"
            style="@style/Button.Standard.Intro"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:enabled="false"
            android:text="@string/proof_of_identity_prompt_accept" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>